--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -76,7 +76,7 @@
     --secondary-foreground-s: 40%;
     --secondary-foreground-l: 35%; /* Darker secondary text */
     --secondary: hsl(var(--secondary-h), var(--secondary-s), var(--secondary-l));
-    --secondary-foreground: hsl(var(--secondary-foreground-h), var(--secondary-foreground-s), var(--secondary-foreground-l));
+    --secondary-foreground: hsl(var(--secondary-foreground-h), var(--secondary-s), var(--secondary-foreground-l));
     
     /* Ring will use primary HSL components */
     --ring: hsl(var(--primary-h), var(--primary-s), calc(var(--primary-l) + 10%));
@@ -187,7 +187,7 @@
 
 @layer components {
     .card-dynamic-border {
-        @apply relative bg-card rounded-2xl shadow-lg border-t-4 border-r-4;
+        @apply relative bg-card rounded-2xl shadow-lg border-t-[5px] border-r-[5px];
         border-image: linear-gradient(to right, 
             hsl(var(--primary-h), var(--primary-s), var(--primary-l)), 
             hsl(var(--chart-3)), 
@@ -225,4 +225,14 @@
 }
 ::-webkit-scrollbar-thumb:hover {
   background-color: hsl(var(--primary-h) var(--primary-s) var(--primary-l)); 
+}
+
+@layer utilities {
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
 }
